# Decision-Intelligence-OS

./: .gitignore  README.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260312_000001_create_v1_core_models.py
apps/api/scripts/: seed_demo.py
apps/api/src/decision_os_backend/: main.py
apps/api/src/decision_os_backend/api/: __init__.py  deps.py  router.py
apps/api/src/decision_os_backend/api/routes/: __init__.py  health.py  scenarios.py  simulations.py
apps/api/src/decision_os_backend/core/: __init__.py  config.py
apps/api/src/decision_os_backend/db/: __init__.py  session.py
apps/api/src/decision_os_backend/models/: __init__.py  decision_assessment.py  enums.py  experiment_plan.py  mixins.py  monthly_snapshot.py  scenario.py  simulation_run.py  virtual_company.py
apps/api/src/decision_os_backend/schemas/: __init__.py  assessment.py  common.py  health.py  planner.py  scenario.py  simulation.py
apps/api/src/decision_os_backend/services/: __init__.py  assessment_service.py  errors.py  planner_service.py  scenario_service.py  simulation_aggregator.py  simulation_service.py
apps/api/src/decision_os_backend/services/decision_engine/: __init__.py  constants.py  engine.py  examples.py  input.py  insights.py  scoring.py  types.py
apps/api/src/decision_os_backend/services/simulation_engine/: __init__.py  agents.py  company_generator.py  domain.py  finance_agent.py  founder_agent.py  founder_agent_examples.py  founder_profiles.py  judge_agent.py  market_agent.py  operations_agent.py  (+4 more)
(+77 files in other folders)
